@@ -7,10 +7,8 @@
 \code{gam} objects. For a single fitted \code{gam} object, Wald tests of
 the significance of each parametric and smooth term are performed, so interpretation 
 is analogous to \code{\link{drop1}} rather than \code{anova.lm} (i.e. it's like type III ANOVA, 
-rather than a sequential type I ANOVA). Otherwise
-the fitted models are compared using an analysis of deviance table: this latter approach 
-should not be use to test the significance of terms which can be penalized 
-to zero. See details.
+rather than a sequential type I ANOVA). Otherwise the fitted models are compared using an analysis of deviance table: this latter approach should not be use to test the significance of terms which can be penalized 
+to zero. Models to be compared should be fitted to the same data using the same smoothing parameter selection method.
 }
 \usage{
 \method{anova}{gam}(object, ..., dispersion = NULL, test = NULL,
@@ -32,7 +30,8 @@ p-values. See \code{\link{summary.gam}} for details.}
 }
 \details{ If more than one fitted model is provided than \code{anova.glm} is
 used, with the difference in model degrees of freedom being taken as the difference 
-in effective degress of freedom. The p-values resulting from this are only approximate, 
+in effective degress of freedom (when possible this is a smoothing parameter uncertainty corrected version).
+The p-values resulting from this are only approximate, 
 and must be used with care. The approximation is most accurate when the comparison 
 relates to unpenalized terms, or smoothers with a null space of dimension greater than zero.
 (Basically we require that the difference terms could be well approximated by unpenalized 
@@ -82,7 +81,7 @@ Wood, S.N. (2013b) A simple test for random effects in regression models. Biomet
 \author{ Simon N. Wood \email{simon.wood@r-project.org} with substantial
 improvements by Henric Nilsson.}
 
-\section{WARNING}{ If models 'a' and 'b' differ only in terms with no un-penalized components then 
+\section{WARNING}{ If models 'a' and 'b' differ only in terms with no un-penalized components (such as random effects) then 
 p values from anova(a,b) are unreliable, and usually much too low.
 
 Default P-values will usually be wrong for parametric terms penalized using `paraPen': use freq=TRUE
