@@ -8,6 +8,11 @@ Currently deprecated and liable to be removed:
 
 1.8-13
 
+* anova.gam modified to use more appropriate reference degrees of freedom 
+  for multiple model call, where possible. Also fixed to allow multiple 
+  formulae models and to use -2*logLik in place of `deviance' for 
+  general.family models.
+
 * added 'all.vars1' to enable terms like s(x$y) in model formulae. 
 
 * modification to gam.fit4 to ignore 'start' if it is immediately worse than 
